:wrench: chore: More mobile fixes, page width no longer too large for mobile, better FAB placement for sidebar

--- a/cirrus-docs/src/layouts/components/sidebar/index.scss
+++ b/cirrus-docs/src/layouts/components/sidebar/index.scss
@@ -52,13 +52,15 @@
 
 @media screen and (max-width: 768px) {
     .default-layout {
+        display: block;
+
         &.content {
             width: 100%;
         }
 
         .tree-nav-header {
             display: block;
-            position: sticky;
+            position: fixed;
             top: 10rem;
         }
     }
